fix: address book action button alignment when cancel is hidden (#10976)
Closes: #6610

--- a/projects/storefrontstyles/scss/components/checkout/steps/shipping-address/_address-form.scss
+++ b/projects/storefrontstyles/scss/components/checkout/steps/shipping-address/_address-form.scss
@@ -2,4 +2,8 @@
 
 %cx-address-form {
   @include checkout-media-style();
+
+  .action-btns {
+    padding: 1rem 0;
+  }
 }
